fix scrollbar

--- a/goorchids/core/static/css/app.css
+++ b/goorchids/core/static/css/app.css
@@ -2338,7 +2338,7 @@ body.taxa #sb-title-inner a {
 #plant-detail-modal .details:after {
   content: "";
   height: 9em;
-  width: 100%;
+  width: 65%;
   background-color: rgba(255, 255, 255, 0);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(40%, white));
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, white 40%);
