--- a/goorchids/core/static/sass/layout/_simple-key.scss
+++ b/goorchids/core/static/sass/layout/_simple-key.scss
@@ -795,7 +795,7 @@
       &:after {
         content: "";
         height: 9em;
-        width: 100%;
+        width: 65%;
         @include linear-gradient(rgba(255, 255, 255, 0) 0%, #fff 40%);
         position: absolute;
         bottom: 0;
